integration/tests/error_timeout.err
error: Http Connection
  --> tests/error_timeout.hurl:1:5
   |
 1 | GET http://localhost:8000/timeout
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Timeout has been reached
   |

