integration/tests/error_timeout.hurl
GET http://localhost:8000/timeout


